melhorias na view de config da imagem, view para visualizar desenhos feitos, ajustes de layout em geral

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_image_config">ImageConfigActivity</string>
     <string name="title_activity_finish">FinishActivity</string>
+    <string name="title_activity_resumo">ResumoActivity</string>
 
 </resources>
